--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
         </div>
     </div>
 
+    <script>
+        window.env = {
+            N8N_WEBHOOK_URL: "<!-- NETLIFY WILL REPLACE THIS -->"
+        };
+    </script>
+
     <script src="script.js"></script>
 </body>
 </html>
