--- a/index.html
+++ b/index.html
@@ -198,12 +198,7 @@
         </div>
     </div>
 
-    <script>
-        window.env = {
-            N8N_WEBHOOK_URL: "<!-- NETLIFY WILL REPLACE THIS -->"
-        };
-    </script>
-
+    <script src="env.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
