--- a/index.html
+++ b/index.html
@@ -179,19 +179,20 @@
     </footer>
 
     <!-- Chat Widget -->
-    <div class="chat-widget" id="chatWidget">
-        <div class="chat-icon" id="chatIcon">💬</div>
-        <div class="chat-window" id="chatWindow">
+    <!-- Chat Widget -->
+    <div id="chatWidget">
+        <div id="chatIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
+            </svg>
+        </div>
+        <div id="chatWindow">
             <div class="chat-header">
-                <span>Chat with us</span>
-                <button class="chat-close" id="chatClose">×</button>
+                <span>Chat with Us</span>
+                <span id="chatClose">&times;</span>
             </div>
-            <div class="chat-messages" id="chatMessages">
-                <div class="message bot-message">
-                    Hello! How can I help you today?
-                </div>
-            </div>
-            <div class="chat-input-container">
+            <div id="chatMessages"></div>
+            <div class="chat-input-area">
                 <input type="text" id="chatInput" placeholder="Type your message...">
                 <button id="chatSend">Send</button>
             </div>
