added: script on head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Serene Haven Salon & Spa</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <!-- Header -->
