Updated: Salon Agent AI to Zenmaticai Salon Agent

--- a/about-app.html
+++ b/about-app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salon Agent AI | Automated Appointment Scheduling</title>
+    <title>Zenmaticai Salon Agent | Automated Appointment Scheduling</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -70,28 +70,28 @@
 
     <div class="container">
         <header>
-            <h1>Salon Agent AI</h1>
+            <h1>Zenmaticai Salon Agent</h1>
             <p>Your intelligent assistant for seamless salon management.</p>
         </header>
         
         <section>
-            <h2>What is Salon Agent AI?</h2>
+            <h2>What is Zenmaticai Salon Agent?</h2>
             <p>
-                Salon Agent AI is a powerful chatbot widget designed to be integrated directly into your salon's website. It acts as a 24/7 virtual receptionist, allowing your clients to book and manage appointments effortlessly through a conversational interface.
+                Zenmaticai Salon Agent is a powerful chatbot widget designed to be integrated directly into your salon's website. It acts as a 24/7 virtual receptionist, allowing your clients to book and manage appointments effortlessly through a conversational interface.
             </p>
         </section>
 
         <section>
             <h2>Purpose: Automating Your Appointment Scheduling</h2>
             <p>
-                Our core purpose is to automate and streamline the appointment scheduling process for salons. By handling client requests, checking availability, and confirming bookings in real-time, Salon Agent AI reduces administrative workload, minimizes booking errors, and ensures a smooth experience for both your staff and your clients.
+                Our core purpose is to automate and streamline the appointment scheduling process for salons. By handling client requests, checking availability, and confirming bookings in real-time, Zenmaticai Salon Agent reduces administrative workload, minimizes booking errors, and ensures a smooth experience for both your staff and your clients.
             </p>
         </section>
 
         <section>
             <h2>Our Use of Google Calendar Data</h2>
             <p>
-                To provide this service, Salon Agent AI connects with your Google Calendar. This connection is essential for the application to function correctly.
+                To provide this service, Zenmaticai Salon Agent connects with your Google Calendar. This connection is essential for the application to function correctly.
             </p>
             <p>
                 This application connects to your Google Calendar to **view and create new appointments on your behalf**. We will only access the calendars you explicitly authorize during the setup process. We do not access any other data in your Google Account. All data accessed is used exclusively for the purpose of scheduling and managing salon appointments.
@@ -101,14 +101,14 @@
         <section>
             <h2>Get Started</h2>
             <p>
-                Ready to transform your salon's booking system? Contact us to learn more about integrating the Salon Agent AI widget.
+                Ready to transform your salon's booking system? Contact us to learn more about integrating the Zenmaticai Salon Agent widget.
             </p>
             <a href="mailto:harits.muhammad.only@gmail.com" class="cta-button">Contact Us</a>
         </section>
 
         <footer>
             <p>
-                By using Salon Agent AI, you agree to our <a href="/privacy-policy.html">Privacy Policy</a>.
+                By using Zenmaticai Salon Agent, you agree to our <a href="/privacy-policy.html">Privacy Policy</a>.
             </p>
         </footer>
     </div>
